# ATP

./: .env-docker  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.py  example.env  example.settings-docker.conf  example.settings.conf  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  run-tests.yml
atp/: app.py  check_availability.py  config_init.py  crud.py  database.py  download.py  import_from_file.py  import_from_tiktok.py  media.py  models.py  settings.py  slideshow.py  telegram.py  telegram_notifier.py  tiktok.py  video_import.py  ytdlp.py
atp/migrations/: env.py
atp/migrations/versions/: 000_initial_migration.py  003_add_video_type.py  004_add_author_column.py  005_add_source_column.py  006_remove_source_column.py  007_add_message_id_column.py  008_add_deleted_reason_column.py  009_remove_updated_at_column.py  010_add_liked_and_saved_columns.py
ms_token/: README.md  get_token.py
ms_token/POC/: Dockerfile  compose.yml  get_token.py
ms_token/selenium/: compose.yaml  get_token_selenium.py  requirements.txt
ms_token/xvfb/: Dockerfile  compose.yaml  entrypoint.sh  get_token_xvfb.py
tests/: conftest.py
tests/integration/: test_app.py  test_check_availability.py  test_crud.py  test_download.py  test_migrations.py  test_telegram.py  test_video_import.py
tests/unit/: test_check_availability_unit.py  test_download_unit.py  test_media.py  test_settings.py  test_telegram_unit.py  test_tiktok.py  test_video_import_unit.py
