[project]
name = "atp"
version = "1.4.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "gallery-dl>=1.29.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.40",
    "yt-dlp[curl-cffi]>=2025.10.14",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 100
